added link to README to remote server with the project

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,8 @@ copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
 index.file=index.php
-run.as=LOCAL
+remote.connection=FilipFTP-21ef95
+remote.directory=/TweeterAppPHP
+remote.upload=ON_SAVE
+run.as=REMOTE
 url=http://localhost/TweeterAppPHP/
