image edit and delete feature

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@ browser.id=Chrome
 copy.src.files=false
 copy.src.on.open=false
 copy.src.target=
+debug.url=DEFAULT_URL
 index.file=index.php
 remote.connection=FilipFTP-21ef95
 remote.directory=/TweeterAppPHP
